test/error/ConstructorAbstract.ci
public class Test
{
	public abstract Test() { //ERROR: Constructor cannot be Abstract
	}
}
